<resources>
    <string name="app_name">Sutpitara</string>
    <string name="suprita">Sut pitaara</string>
    <string name="desc_splash">Shop Indian Wears</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="track_your_goal">Track Your Goal</string>
    <string name="track_goal_content">Don\'t worry if you have trouble determining your goals, We can help you determine your goals and track your goals</string>
    <string name="hey_there">Hey there,</string>
    <string name="create_an_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accept_policy_txt">By continuing you accept our <u>Privacy Policy</u> and <u>Term of Use</u></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="c1">Start Icon in header</string>
    <string name="c2">End icon in header</string>
    <string name="general_text">General Text</string>
    <string name="legal_information">Legal Information</string>
    <string name="legal_policies">Legal Policies</string>
    <string name="about_us">About Us</string>
    <string name="category_name">Category Name</string>
    <string name="search_main_hint">Search for your favourite clothes</string>
    <string name="categories">Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_offers">Top Offers</string>
    <string name="limited_time_txt">Limited Time Deals</string>
    <string name="why_to_purchase_with_us">Why To Purchase with Us?</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="lorem_med">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh integer massa risus est feugiat fames viverra. Sed molestie risus, odio a mi scelerisque. Tincidunt nullam arcu cursus lobortis enim amet. Quis amet a, in aliquam pellentesque.</string>
    <string name="lorem_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh integer massa risus est feugiat fames viverra. </string>

    <string name="upi">UPI</string>
    <string name="wallet">Wallet</string>
    <string name="debit_card">Debit card</string>
    <string name="credit_card">Credit card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="continue_txt">Continue</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="checkout">Checkout</string>
    <string name="notification_title">Notification title</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="gender_desc">This helps us personalize your journey to you.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-binary</string>
    <string name="rather_not_say">Rather not say</string>
    <string name="faq_s">FAQ’s</string>
    <string name="contact_us">Contact Us</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="type_your_number">Type Your Number</string>
    <string name="call_now">Call Now</string>
    <string name="schedule_call">Schedule Call</string>
    <string name="ethnic_lehanga">Ethnic Lehanga</string>
    <string name="color_green">Color : Green</string>
    <string name="rs_1299">Rs. 1299</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="rand_time1">1:32 PM</string>
    <string name="sutpitara_virtual_assistant">Sutpitara Virtual Assistant</string>
    <string name="otp_page_desc">Enter the 6-digit code we have sent to +1 206-312-9956 to complete the process</string>
    <string name="enter_your_6_digit_otp">Enter your 6 Digit OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="login_using_your_mobile_no">Login Using your mobile no.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verify_create_account"><![CDATA[Verify & Create Account]]></string>
    <string name="centred_asterik">∗</string>
    <string name="didn_t_recieved_code">Didn’t received code?</string>
    <string name="req_again">Request Again</string>
    <string name="get_code_via">Get code via</string>
    <string name="verify_your_number">Verify your Number</string>
    <string name="product_title">Product title</string>
    <string name="sample_price">$ 10</string>
    <string name="region">Region</string>
    <string name="us">United States</string>
    <string name="currency">Currency</string>
    <string name="usd">$ (USD)</string>
    <string name="default_address">DEFAULT ADDRESS</string>
    <string name="home">Home</string>
    <string name="edit">EDIT</string>
    <string name="remove">REMOVE</string>


    <style name="lorem">lorem</style>

    <string name="title_activity_otp">OtpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="Size">
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>
</resources>