<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginBottom="20dp"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="25dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:scaleType="centerCrop"
            android:src="@drawable/sample2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/ethnic_lehanga"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"
                android:rating="3.7"
                android:stepSize="0.05" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/color_green"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:maxLines="1"
                android:text="@string/rs_1299"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/inter_regular"
                    android:textSize="13sp"
                    android:gravity="center"
                    app:layout_constraintEnd_toStartOf="@+id/remove_btn"
                    android:id="@+id/buy_now_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/wishlist_btn_bg"
                    android:text="@string/buy_now"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:fontFamily="@font/inter_regular"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@+id/buy_now_btn"
                    android:id="@+id/remove_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/wishlist_btn_bg"
                    android:gravity="center"
                    android:text="@string/add_to_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>