<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7EEDA"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingHorizontal="28dp"

    tools:context=".Activities.RegistrationScreen">

    <LinearLayout
        android:layout_above="@+id/bottom_container"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/login_using_your_mobile_no"
            android:textColor="#980000"
            android:textSize="20sp"
            tools:targetApi="o" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="15sp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:weightSum="1"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:background="@drawable/otp_bg"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/ic_india_flag"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textColor="#202020"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91 -"/>


            </LinearLayout>

            <EditText
                android:textColor="#202020"
                android:autofillHints="phone"
                android:inputType="phone"
                android:id="@+id/etMob"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLength="10"
                android:background="@drawable/otp_bg"
                android:layout_marginStart="20dp"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/generateOtp"
            android:background="@drawable/red_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/generate_otp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="1.6dp"
                android:layout_weight="5"
                android:background="@drawable/horizontal_div_1" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/or"
                android:textColor="#1D1617"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.6dp"
                android:layout_weight="5"
                android:background="@drawable/horizontal_div_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@drawable/round_stroke_btn_white_bg"
                android:padding="18dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_google" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_stroke_btn_white_bg"
                android:padding="18dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_facebook" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/already_have_an_account"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/primaryRed"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>